# tnc-fhh

./: CMakeLists.txt  LICENSE  README  tncfhhConfig.h.in
imcv/: CMakeLists.txt  imcConfig.h.in  imvConfig.h.in
imcv/attestation/: CMakeLists.txt
imcv/attestation/imc/: CMakeLists.txt
imcv/attestation/imc/conf/: attestationimc.file
imcv/attestation/imc/doc/: Features.jude
imcv/attestation/imc/src/: AttestationIMC.cpp  AttestationIMC.h  AttestationIMCLibrary.cpp  AttestationIMCLibrary.h  PcrSelection.cpp  PcrSelection.h
imcv/attestation/imv/: CMakeLists.txt
imcv/attestation/imv/conf/: attestationimv.policy
imcv/attestation/imv/src/: AttestationIMV.cpp  AttestationIMV.h  AttestationIMVLibrary.cpp  AttestationIMVLibrary.h  AttestationIMVPolicyManager.cpp  AttestationIMVPolicyManager.h
imcv/attestation/imv/test/: main.cpp
imcv/clamav/: CMakeLists.txt
imcv/clamav/imc/: CMakeLists.txt
imcv/clamav/imc/conf/: clamavimc.conf
imcv/clamav/imc/src/: ClamavIMC.cpp  ClamavIMC.h  ClamavIMCLibrary.cpp  ClamavIMCLibrary.h
imcv/clamav/imv/: CMakeLists.txt
imcv/clamav/imv/conf/: clamavimv.policy
imcv/clamav/imv/src/: ClamavIMV.cpp  ClamavIMV.h  ClamavIMVLibrary.cpp  ClamavIMVLibrary.h
imcv/dummy/: CMakeLists.txt
imcv/dummy/imc/: CMakeLists.txt
imcv/dummy/imc/src/: DummyIMC.cpp  DummyIMC.h  DummyIMCLibrary.cpp  DummyIMCLibrary.h
imcv/dummy/imv/: CMakeLists.txt
imcv/dummy/imv/src/: DummyIMV.cpp  DummyIMV.h  DummyIMVLibrary.cpp  DummyIMVLibrary.h
imcv/example/: CMakeLists.txt
imcv/example/imc/: CMakeLists.txt
imcv/example/imc/src/: ExampleIMC.cpp  ExampleIMC.h  ExampleIMCLibrary.cpp  ExampleIMCLibrary.h
imcv/example/imv/: CMakeLists.txt
imcv/example/imv/src/: ExampleIMV.cpp  ExampleIMV.h  ExampleIMVLibrary.cpp  ExampleIMVLibrary.h
imcv/hostscanner/: CMakeLists.txt
imcv/hostscanner/imc/: CMakeLists.txt
imcv/hostscanner/imc/src/: HostScannerIMC.cpp  HostScannerIMC.h  HostScannerIMCLibrary.cpp  HostScannerIMCLibrary.h
imcv/hostscanner/imv/: CMakeLists.txt
imcv/hostscanner/imv/conf/: hostscannerimv.policy
imcv/hostscanner/imv/src/: HostScannerIMV.cpp  HostScannerIMV.h  HostScannerIMVLibrary.cpp  HostScannerIMVLibrary.h
imcv/platid/: CMakeLists.txt
imcv/platid/imc/: CMakeLists.txt
imcv/platid/imc/conf/: platidimc.file  platidimc.test.cert  platidimc.test.key
imcv/platid/imc/src/: PlatidIMC.cpp  PlatidIMC.h  PlatidIMCLibrary.cpp  PlatidIMCLibrary.h  testing.c
imcv/platid/imv/: CMakeLists.txt
imcv/platid/imv/conf/: platidimv.certs
imcv/platid/imv/src/: CertManager.h  FileCertManager.cpp  FileCertManager.h  PlatidIMV.cpp  PlatidIMV.h  PlatidIMVLibrary.cpp  PlatidIMVLibrary.h
imunit/: CMakeLists.txt
imunit/src/imunit/: AbstractIMUnit.cpp  AbstractIMUnit.h  IMUnitLibrary.cpp  IMUnitLibrary.h
imunit/src/imunit/exception/: ResultException.cpp  ResultException.h
imunit/src/imunit/imc/: AbstractIMC.cpp  AbstractIMC.h  IMCLibrary.cpp  IMCLibrary.h  TNCC.cpp  TNCC.h
imunit/src/imunit/imv/: AbstractIMV.cpp  AbstractIMV.h  IFIMVImpl.cpp  IMVLibrary.cpp  IMVLibrary.h  TNCS.cpp  TNCS.h
naaeap/: CMakeLists.txt
naaeap/src/naaeap/: naaeap.cpp  naaeap.h
naaeap/src/naaeap/data/: EapTncBuffer.cpp  EapTncBuffer.h  EapTncFragment.cpp  EapTncFragment.h
naaeap/src/naaeap/exception/: AcknowledgementException.cpp  AcknowledgementException.h
naaeap/src/naaeap/logic/: Defragmentation.cpp  Defragmentation.h  Fragmentation.cpp  Fragmentation.h
tncs/: CMakeLists.txt
tncs/conf/: tnc_config  xacml-ifm-imv.conf
tncs/src/tncs/: tncsConfig.h.in
tncs/src/tncs/exception/: ConnectionStateException.cpp  ConnectionStateException.h  ConnectionStateExceptionWithTNCCSData.cpp  ConnectionStateExceptionWithTNCCSData.h  ResultException.cpp  ResultException.h  TNCCSProtocolNotSupportedException.cpp  TNCCSProtocolNotSupportedException.h
tncs/src/tncs/iel/: AbstractTNCCSProtocol.cpp  AbstractTNCCSProtocol.h  Connection.cpp  Connection.h  Coordinator.cpp  Coordinator.h  IFTNCSImpl.cpp  IMV.cpp  IMV.h  IMVProperties.cpp  IMVProperties.h  Policy.cpp  Policy.h  TNCCSData.cpp  TNCCSData.h  string_helper.h
tncs/src/tncs/iel/soh/: SOH1Protocol.cpp  SOH1Protocol.h
tncs/src/tncs/iel/tnc1/: IMCIMVMessage.cpp  IMCIMVMessage.h  TNC1Protocol.cpp  TNC1Protocol.h  TNCCSBatch.cpp  TNCCSBatch.h  TNCCTNCSMessage.h  (+5 more)
tncsim/: CMakeLists.txt  libtnc-1.19.diff  libtnc-1.21.diff  libtnc-1.23.base64.patch
tncsim/conf/: log4cxx.properties  tncsim_config
tncsim/src/: TNCCSData.cpp  TNCCSData.h  tncsim.cpp  tncsimConfig.h.in
tncsim/src/client/: AbstractTNCC.cpp  AbstractTNCC.h
tncsim/src/client/libtnc/: LibtncTNCC.cpp  LibtncTNCC.h
tncsim/src/server/: AbstractTNCS.cpp  AbstractTNCS.h  Finished.cpp  Finished.h
tncsim/src/server/libtnc/: LibtncTNCS.cpp  LibtncTNCS.h
tncsim/src/server/tncfhh/: TncfhhTNCS.cpp  TncfhhTNCS.h
tncutil/: CMakeLists.txt
tncutil/src/tncutil/: Configuration.cpp  Configuration.h  ConfigurationService.cpp  ConfigurationService.h  XercesString.cpp  XercesString.h
tncxacml/: CMakeLists.txt
tncxacml/conf/: xacml-pdp.conf
tncxacml/src/tncxacml/: XACMLConstants.cpp  XACMLConstants.h  XACMLHelper.cpp  XACMLHelper.h
vpn/: CMakeLists.txt  README
vpn/libtncvpn/: CMakeLists.txt
vpn/naavpn/: CMakeLists.txt
vpn/naavpn/conf/: pdp.conf  tnc_vpn.conf
vpn/naavpn/src/naavpn/: MessageHandler.cpp  MessageHandler.h  PEPClient.cpp  PEPClient.h  PEPNotifier.cpp  PEPNotifier.h  TNCServer.cpp  TNCServer.h  TNCSession.cpp  TNCSession.h
vpn/naavpn/src/server/: main.cpp
vpn/vpnclient/: CMakeLists.txt
vpn/vpnclient/conf/: snip-1-b.xml  snip-1.xml  snip-2.xml  snip-3.xml
vpn/vpnclient/conf/client/: client.conf
vpn/vpnclient/src/vpnclient/: LibTNCClient.cpp  LibTNCClient.h  TNCClient.cpp  TNCClient.h  TNCMockClient.cpp  TNCMockClient.h  main.cpp
vpn/vpnpep/: CMakeLists.txt
vpn/vpnpep/cmake_modules/: FindTncvpn.cmake
vpn/vpnpep/conf/: allow-client.sh  deny-all.sh  deny-client.sh  log4j.properties  pep.conf
vpn/vpnpep/src/vpnpep/: AssessmentScheduler.h  EndpointDB.cpp  EndpointDB.h  EnforcementManager.h  PEPServer.h  PEPSession.h  main.cpp
(+52 files in other folders)
